force-app/main/default/objects/Article__c/Article__c.object-meta.xml
<CustomObject>
    <description>Stores sports news articles with rich text content, images, and metadata</description>
    <label>Article</label>
    <nameField>
        <displayFormat>NA-{0000}</displayFormat>
        <label>Article Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>