force-app/main/default/objects/Article__c/fields/Article_Type__c.field-meta.xml
<CustomField>
    <fullName>Article_Type__c</fullName>
    <description>Type of article (Match Preview, Match Recap, Team Analysis, Player Profile, Season Review)</description>
    <label>Article Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>matchPreview</fullName>
                <label>Match Preview</label>
            </value>
            <value>
                <fullName>matchRecap</fullName>
                <label>Match Recap</label>
            </value>
            <value>
                <fullName>teamAnalysis</fullName>
                <label>Team Analysis</label>
            </value>
            <value>
                <fullName>playerProfile</fullName>
                <label>Player Profile</label>
            </value>
            <value>
                <fullName>seasonReview</fullName>
                <label>Season Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>