force-app/main/default/objects/Article__c/fields/Article_URL__c.field-meta.xml
<CustomField>
    <fullName>Article_URL__c</fullName>
    <description>Original article URL (for reference and linking)</description>
    <label>Article URL</label>
    <type>Url</type>
</CustomField>