force-app/main/default/objects/Article__c/fields/Header_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Header_Image_URL__c</fullName>
    <description>URL to the header/featured image for the article</description>
    <label>Header Image URL</label>
    <type>Url</type>
</CustomField>