force-app/main/default/objects/Article__c/fields/Is_Published__c.field-meta.xml
<CustomField>
    <fullName>Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the article is published and visible to users</description>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>