force-app/main/default/objects/Article__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Match record for AI-generated match content</description>
    <label>Match</label>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Articles</relationshipLabel>
    <relationshipName>Match_Articles</relationshipName>
    <type>Lookup</type>
</CustomField>