force-app/main/default/objects/Article__c/fields/Reading_Time__c.field-meta.xml
<CustomField>
    <fullName>Reading_Time__c</fullName>
    <description>Estimated reading time in minutes (e.g., 5)</description>
    <label>Reading Time (minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>