force-app/main/default/objects/Article__c/fields/Related_Match__c.field-meta.xml
<CustomField>
    <fullName>Related_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to related fixture/match (Opportunity)</description>
    <label>Related Match</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Articles</relationshipLabel>
    <relationshipName>Articles</relationshipName>
    <type>Lookup</type>
</CustomField>