force-app/main/default/objects/Article__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source/publication name (e.g., ESPN, AFL.com, BBC Sport)</description>
    <label>Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>